api-digester: rename argument `-compare-sdk` to `-generate-migration-script`. SR-10489